   * new [store_villages] tag to store village locations
   * all [store_*] tags get a default variable name
   * use complex variable substitution almost everywhere
   * new key for [set_variable], literal=, to avoid variable substitution
   * [effect] can now toggle the zoc
   * new key for [variable], boolean_equals=, to test boolean equality
   * remove some old backward compatibility support
 * user interface:
   * new sounds for user interface events
   * added the option to show warnings about deprecated WML usage
 * misceleanous bug fixes
   * an friendly healer hill now stop poisoned unit to lose HP
   * a unit that dies while attacking will now correctly play it's own death
   * turn bell can sound if other soundFX are turned off

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland
     * The Crossing, fixed a bug which prevented the undead leader spawned
        at turn 8 to have a keep
     * The Duel the keep is replaced by a castle tile instead of grass
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
     * In Elven Council the leaders are no longer standing in a keep
       but in a normal castle tile
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
   * Two Brothers
     * updated the portrait of Bjarn to match the new mage colors
     * removed Skeletons as enemies in the first mission on easy, and
       Skeleton Archer as enemy on hard
     * added Ghouls as enemies for all undeads
     * some map updates to make them easier (2nd mission) or look better (all
       the other missions)
 * editor