@@ -39,6 +39,8 @@ Version 1.3.1+svn:
    * [effect] can now toggle the zoc
    * new key for [variable], boolean_equals=, to test boolean equality
    * remove some old backward compatibility support
+   * set_name in attack modification [effect] no longer change the weapon's 
+     description, use the new set_description instead
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
